overlays/prod/infra/apps/prometheus/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: grafana-http-port
      protocol: HTTP
    hosts:
      - grafana.simplefxn.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: grafana-https-port
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: grafana.simplefxn.com
    hosts:
      - grafana.simplefxn.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
  - "grafana.simplefxn.com"
  gateways:
  - grafana-gateway
  http:
  - route:
    - destination:
        host: prometheus-grafana.infra.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: istio-system
spec:
  host: prometheus-grafana.infra.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
